styling: fixed alignment in createtodew page

--- a/src/components/pages/CreateTodew.css
+++ b/src/components/pages/CreateTodew.css
@@ -15,6 +15,13 @@ label {
   font-size: 1.2rem;
 }
 
+#create-todew-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
 #create-todew-form > textarea {
   width: 30rem;
   height: 10rem;
@@ -23,9 +30,6 @@ label {
   border: 1px solid #0f172a;
 }
 
-#create-todew-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+#create-todew-form > #due-date, #create-todew-form > #priority {
+  align-self: center;
 }
